[project]
name = "pyproject-manifest"
version = "0.1.0"
description = "Testing pyproject-manifest."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["flask==2.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
# inline lists with mixed types are a toml 1.0 feature
dev = [{ include-group = "lint" }, { include-group = "docs" }, "ipython"]
docs = ["mkdocs>=1.4"]
lint = ["ruff>=0.1.14"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".pixi", "__pycache__"]
# the TOML parser should also support comments in lists
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
]

[tool.pixi.workspace]
name = "pyproject-manifest"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi]
# This dotted inline table fails with the `toml` parser, but works with `@iarna/toml`.
pypi-dependencies.boltons = "*"

[tool.pixi.tasks]
test = "echo 'Running tests...'"
